--- a/examples/gui/README
+++ b/examples/gui/README
@@ -8,7 +8,7 @@ These examples show how to create GUI applications with PHP.
   swing you must switch it on, for example by setting the
   java.lang.System property "java.awt.headless" to false. Otherwise you
   will get an "awt headless" exception. Please note that swing has
-  several design problems which translate into a extensive number of
+  several design problems which translate into an extensive number of
   swing related bugs and system crashes. One such problem is that swing
   creates UI threads which may cause the application to hang. Please
   do not use swing to create a java GUI, please use SWT or GTK instead.
