--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,21 @@
 2005-09-15  Jost Boekemeier  <jostb@intern>
 
+	* java_bridge.c (checkError): Do not longjmp, this may confuse
+	other modules.
+
+	* java.c (allocate_php4_exception): Do not use longjmp.
+
+	* examples/bench/callback3.php: correct path.
+
+	* server/php/java/servlet/CGIServlet.java (run): Dispose the
+	executable, for PR1291175.
+
+	* tests.php5/instanceof.php: Rewritten, for PR1286136.
+
+	* VERSION, php-java-bridge.spec: Version 2.0.8RC5 fixes PR1286136 and 1291175.
+	
+2005-09-15  Jost Boekemeier  <jostb@intern>
+
 	* client.c (begin): Display protocol error if we receive HTML
 
 	* java.c (session): Accept 0 parameters
